# vulnhuntrs

docs/tree-sitter/examples/: README.md  enumerate_definitions.rs
docs/tree-sitter/examples/queries/: java.scm
docs/tree-sitter/examples/testfiles/: test.py  test.ts
examples/tree-sitter/: Cargo.toml
examples/tree-sitter/src/queries/: javascript.scm  python.scm  typescript.scm
examples/tree-sitter/tests/testfiles/: test.java  test.js
